--- a/Portfolio_Front_End/assets/css/style.css
+++ b/Portfolio_Front_End/assets/css/style.css
@@ -882,6 +882,11 @@ a:hover {
   font-size: 1.2rem;
 }
 
+.parent-coment:hover{
+  color: #0078ff;
+  transition: color 0.3s ;
+}
+
 /*--------------------------------------------------------------
 # Portfolio Details
 --------------------------------------------------------------*/
