Ajax Using Create

--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/_ViewImports.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using ParfolioWebSiteView.Areas.Admin.ViewModes
 @using ParfolioWebSiteView.Models
 @using ParfolioWebSiteView.ViewModels
+@using ParfolioWebSiteView.Areas.UserAdmin.ViewModels;
 @using Microsoft.AspNetCore.Identity;
 @using PagedList;
 @using PagedList.Mvc;
